[package]
name = "converto-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10.9"
tokio = { version = "1.12.0", features = ["full"] }
float-cmp = "0.9.0"
mongodb = "2.0.1"
serde = "1.0.130"
futures = "0.3"
timer = "0.2.0"
chrono = "0.4.19"